--- a/res/layout-land/activity_dashbord.xml
+++ b/res/layout-land/activity_dashbord.xml
@@ -4,8 +4,8 @@
     android:layout_height="fill_parent">
     <include layout="@layout/partial_search" />
     <LinearLayout android:orientation="horizontal"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:paddingTop="30dip">
+        android:layout_width="fill_parent" android:layout_height="fill_parent"
+        android:gravity="center_vertical">
         <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent" android:layout_height="wrap_content"
             android:layout_weight="1" android:gravity="center">
