--- a/res/layout/activity_repositorie_info.xml
+++ b/res/layout/activity_repositorie_info.xml
@@ -13,6 +13,9 @@
     <TextView android:id="@+id/owner" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:textSize="25dip" />
     <include layout="@layout/partial_separator" />
+    <TextView android:id="@+id/description"
+        android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    <include layout="@layout/partial_separator" />
     <TextView android:text="@string/homepage"
         android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView android:id="@+id/homepage" android:layout_width="wrap_content"
