--- a/res/layout/activity_repositorie_info.xml
+++ b/res/layout/activity_repositorie_info.xml
@@ -2,17 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical">
-    <TextView android:text="@string/repositorie_name"
+    <TextView android:text="@string/owner_name"
         android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/repositorie_name"
+    <TextView android:id="@+id/owner_repositorie"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:textSize="25dip" />
     <include layout="@layout/partial_separator" />
-    <TextView android:text="@string/owner"
+    <TextView android:text="@string/description"
         android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/owner" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:textSize="25dip" />
-    <include layout="@layout/partial_separator" />
     <TextView android:id="@+id/description"
         android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <include layout="@layout/partial_separator" />
