--- a/res/layout/activity_repositorie_info.xml
+++ b/res/layout/activity_repositorie_info.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
-    android:orientation="vertical">
-    <TextView android:text="@string/owner_name"
-        android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/owner_repositorie"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:textSize="25dip" />
-    <include layout="@layout/partial_separator" />
-    <TextView android:text="@string/description"
-        android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/description"
-        android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <include layout="@layout/partial_separator" />
-    <TextView android:text="@string/homepage"
-        android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    <TextView android:id="@+id/homepage" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:autoLink="web"
-        android:textSize="25dip" />
-    <include layout="@layout/partial_separator" />
-    <Spinner android:id="@+id/branches" android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <include layout="@layout/partial_separator" />
-    <Spinner android:id="@+id/tags" android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <LinearLayout android:layout_width="fill_parent"
+        android:layout_height="fill_parent" android:orientation="vertical">
+        <TextView android:text="@string/owner_name"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/owner_repositorie"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:textSize="25dip" />
+        <include layout="@layout/partial_separator" />
+        <TextView android:text="@string/description"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/description"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <include layout="@layout/partial_separator" />
+        <TextView android:text="@string/homepage"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <TextView android:id="@+id/homepage"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:autoLink="web" android:textSize="25dip" />
+        <include layout="@layout/partial_separator" />
+        <Spinner android:id="@+id/branches"
+            android:layout_width="fill_parent" android:layout_height="wrap_content" />
+        <include layout="@layout/partial_separator" />
+        <Spinner android:id="@+id/tags" android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</ScrollView>
