--- a/res/layout/partial_bookmark.xml
+++ b/res/layout/partial_bookmark.xml
@@ -5,5 +5,5 @@
     android:gravity="center">
     <Button android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:drawableTop="@drawable/bookmark"
-        android:text="@string/bookmark" />
+        android:text="@string/bookmark" android:onClick="onBookmarkButton" />
 </LinearLayout>
