--- a/res/layout/partial_configure.xml
+++ b/res/layout/partial_configure.xml
@@ -5,5 +5,5 @@
     android:gravity="center">
     <Button android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:drawableTop="@drawable/configure"
-        android:text="@string/configure" />
+        android:text="@string/configure" android:onClick="onConfigureButton" />
 </LinearLayout>
