--- a/res/layout/partial_local_drive.xml
+++ b/res/layout/partial_local_drive.xml
@@ -5,5 +5,5 @@
     android:layout_weight="1">
     <Button android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:drawableTop="@drawable/local_drive"
-        android:text="@string/local_drive" />
+        android:text="@string/local_drive" android:onClick="onLocalDriveButton" />
 </LinearLayout>
