--- a/res/layout/activity_dashbord.xml
+++ b/res/layout/activity_dashbord.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <include layout="@layout/partial_search" />
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:layout_weight="1" android:gravity="center_vertical">
-        <include layout="@layout/partial_bookmark" />
-        <include layout="@layout/partial_local_drive" />
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:fillViewport="true">
+    <LinearLayout android:orientation="vertical"
+        android:layout_width="fill_parent" android:layout_height="fill_parent">
+        <include layout="@layout/partial_search" />
+        <LinearLayout android:orientation="horizontal"
+            android:layout_width="fill_parent" android:layout_height="wrap_content"
+            android:layout_weight="1" android:gravity="center_vertical">
+            <include layout="@layout/partial_bookmark" />
+            <include layout="@layout/partial_local_drive" />
+        </LinearLayout>
+        <LinearLayout android:orientation="horizontal"
+            android:layout_width="fill_parent" android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <include layout="@layout/partial_configure" />
+            <include layout="@layout/partial_information" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="fill_parent" android:layout_height="wrap_content"
-        android:layout_weight="1">
-        <include layout="@layout/partial_configure" />
-        <include layout="@layout/partial_information" />
-    </LinearLayout>
-</LinearLayout>
+</ScrollView>
