--- a/res/layout/partial_search.xml
+++ b/res/layout/partial_search.xml
@@ -7,10 +7,10 @@
         android:layout_marginLeft="5px" />
     <EditText android:layout_height="fill_parent"
         android:layout_width="wrap_content" android:id="@+id/q"
-        android:hint="@string/search_word" android:layout_weight="1"
+        android:hint="@string/keyword_search" android:layout_weight="1"
         android:singleLine="true" android:layout_marginLeft="5px"
-        android:layout_marginRight="5px" />
+        android:layout_marginRight="5px" android:onClick="onSearchButton" />
     <ImageButton android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:onClick="onSearchButton"
-        android:src="@drawable/search" android:layout_marginRight="5px" />
+        android:layout_height="wrap_content" android:onClick="onUserSearchButton"
+        android:src="@drawable/user" android:layout_marginRight="5px" />
 </LinearLayout>
