--- a/res/layout/activity_user_search.xml
+++ b/res/layout/activity_user_search.xml
@@ -6,7 +6,7 @@
         android:layout_width="fill_parent" android:gravity="center_vertical">
         <EditText android:layout_height="fill_parent"
             android:layout_width="wrap_content" android:id="@+id/q"
-            android:hint="@string/option_language_example" android:layout_weight="1"
+            android:hint="@string/username" android:layout_weight="1"
             android:singleLine="true" android:layout_marginLeft="5px"
             android:layout_marginRight="5px" />
         <ImageButton android:layout_width="wrap_content"
