--- a/res/layout/partial_search.xml
+++ b/res/layout/partial_search.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content" android:layout_width="fill_parent"
     android:gravity="center_vertical">
     <ImageView android:layout_height="wrap_content"
-        android:layout_width="wrap_content" android:src="@drawable/icon"
+        android:layout_width="wrap_content" android:src="@drawable/icon2"
         android:layout_marginLeft="5px" />
     <EditText android:layout_height="fill_parent"
         android:layout_width="wrap_content" android:id="@+id/q"
