レイアウトの最適化

--- a/res/layout/activity_edit_bookmark.xml
+++ b/res/layout/activity_edit_bookmark.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="fill_parent">
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:fillViewport="true">
     <LinearLayout android:layout_width="fill_parent"
-        android:layout_height="fill_parent" android:orientation="vertical">
+        android:layout_height="wrap_content" android:orientation="vertical">
         <LinearLayout android:layout_height="wrap_content"
             android:layout_width="fill_parent">
             <TextView android:text="@string/owner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView android:id="@+id/owner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dip" android:layout_height="wrap_content"
                 android:layout_weight="1" android:gravity="right"
                 android:textSize="20dip" />
         </LinearLayout>
@@ -21,8 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dip" android:layout_height="wrap_content"
                 android:layout_weight="1" android:gravity="right"
                 android:textSize="20dip" />
         </LinearLayout>
@@ -33,15 +32,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView android:id="@+id/tree"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dip" android:layout_height="wrap_content"
                 android:layout_weight="1" android:gravity="right"
                 android:textSize="20dip" />
         </LinearLayout>
         <include layout="@layout/partial_separator" />
         <TextView android:text="@string/note"
             android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <EditText android:layout_height="wrap_content"
+        <EditText android:layout_height="0dip"
             android:id="@+id/note" android:layout_width="fill_parent"
             android:layout_weight="1" android:gravity="top" />
         <include layout="@layout/partial_separator" />
@@ -52,8 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" android:onClick="onOkButton" />
             <Button android:text="@string/cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dip" android:layout_height="wrap_content"
                 android:layout_weight="1" android:onClick="onCancelButton" />
         </LinearLayout>
     </LinearLayout>
