--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -10,7 +10,7 @@
     <LinearLayout android:layout_height="wrap_content"
         android:layout_width="fill_parent" android:gravity="center_vertical">
         <EditText android:layout_height="fill_parent"
-            android:layout_width="wrap_content" android:id="@+id/language"
+            android:layout_width="0dip" android:id="@+id/language"
             android:hint="@string/option_language_example" android:layout_weight="1"
             android:singleLine="true" android:layout_marginLeft="5px"
             android:layout_marginRight="5px" />
