--- a/res/layout/activity_dashbord.xml
+++ b/res/layout/activity_dashbord.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:fillViewport="true">
     <LinearLayout android:orientation="vertical"
-        android:layout_width="fill_parent" android:layout_height="fill_parent">
+        android:layout_width="fill_parent" android:layout_height="wrap_content">
         <include layout="@layout/partial_search" />
         <LinearLayout android:orientation="horizontal"
             android:layout_width="fill_parent" android:layout_height="wrap_content"
