SearchActivityとBookmarkActivityをHomeActivityに移行した

--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <EditText android:layout_height="wrap_content"
-        android:layout_width="fill_parent" android:id="@+id/q"
-        android:hint="@string/search_word"
-        android:singleLine="true" android:layout_marginLeft="5px"
-        android:layout_marginRight="5px" />
-    <LinearLayout android:layout_height="wrap_content"
-        android:layout_width="fill_parent" android:gravity="center_vertical">
-        <EditText android:layout_height="fill_parent"
-            android:layout_width="0dip" android:id="@+id/language"
-            android:hint="@string/option_language_example" android:layout_weight="1"
-            android:singleLine="true" android:layout_marginLeft="5px"
-            android:layout_marginRight="5px" />
-        <ImageButton android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:onClick="onSearchButton"
-            android:src="@drawable/search" android:layout_marginRight="5px" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical" >
+
+        <EditText
+            android:id="@+id/q"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/search_word"
+            android:inputType="text" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onSearchButton"
+            android:src="@drawable/search" />
     </LinearLayout>
-    <ListView android:id="@+id/repositorie"
-        android:layout_height="fill_parent" android:layout_width="fill_parent" />
+
+    <ListView
+        android:id="@+id/repositorie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
