--- a/res/layout/title_bar_menu.xml
+++ b/res/layout/title_bar_menu.xml
@@ -12,4 +12,12 @@
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:drawable/ic_menu_more"
+        android:onClick="onMenuButton" />
+
 </RelativeLayout>
