--- a/res/layout/title_bar_menu.xml
+++ b/res/layout/title_bar_menu.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/title"
         style="?android:attr/windowTitleStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0px"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
+        android:layout_weight="1"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <Button
+    <ImageButton
+        android:src="@android:drawable/ic_menu_more"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="@android:drawable/ic_menu_more"
+        android:layout_height="match_parent"
+        android:background="#00000000"
         android:onClick="onMenuButton" />
 
-</RelativeLayout>
+</LinearLayout>
