--- a/res/layout/activity_information.xml
+++ b/res/layout/activity_information.xml
@@ -15,10 +15,21 @@
             android:text="アプリケーションについて"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="GitHubViewer Ver 1.9.7" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GitHubViewer Ver " />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/version_name" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
